@@ -47,6 +47,10 @@ BUG FIXES:
 - Assertion failure in CFontDialog (jumpingfences)
 
 - Autopost will now work if the autopost button is not present while sitting out. (quiqsilver)
+
+- m_name_known, m_balance_known will be properly set when connected to PPro (spew)
+
+- logging (oh1.log) was not used when connected to PPro (spew)
   
 v1.7.0 2008-03-15
 NEW STUFF:
